<resources>
    <string name="app_name">KidzUp (0.5.19298)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="choose_a_day">Choose a day of the week</string>
    <string name="create_new_account">Create New Account</string>
    <string name="choose_mode">Choose your mode</string>
    <string-array name="days_of_the_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="modes">
        <item>Adult</item>
        <item>Child</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="school">School</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="search">Search</string>
    <string name="log_in">Log In</string>
    <string name="welcome_to_kidzup">Welcome to KidzUp!</string>
    <string name="family">Family</string>
</resources>
