<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_task_wb"
        android:title="@string/tasks" />
    <item
        android:id="@+id/nav_school"
        android:icon="@drawable/ic_school_wb"
        android:title="@string/school" />
    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/icon_messages"
        android:title="@string/messages" />
    <item
        android:id="@+id/nav_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends" />
    <item
        android:id="@+id/nav_family"
        android:icon="@drawable/icon_family_bw"
        android:title="@string/family" />
    <item
        android:id="@+id/nav_friend_requests"
        android:icon="@drawable/icon_request_friend"
        android:title="@string/requests" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_cat"
        android:title="Me" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_log_out"
        android:title="Log Out" />
</menu>
