<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.admin.prototypekidzup1.activity.StartActivity">

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/start_register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/welcome_to_kidzup"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/start_register_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="123dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:text="@string/create_new_account"
        android:textSize="14sp" />

    <Button
        android:id="@+id/start_signin_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/start_register_button"
        android:layout_below="@+id/welcome_header"
        android:layout_marginTop="17dp"
        android:background="@color/colorPrimary"
        android:text="@string/log_in"
        android:textColor="@android:color/background_light"
        android:textSize="14sp" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        app:srcCompat="@drawable/kids_well_being" />
</RelativeLayout>
